outputs/main/hsevo_bpp_online_2025-08-07_18-44-47/problem_iter23_response8.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 17
    base = 1.0 / (rem_feas a step in the overall solution.) # replace with the correct formula or remove if not needed.
                  ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 17
    base = 1.0 / (rem_feas a step in the overall solution.) # replace with the correct formula or remove if not needed.
                  ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 17
    base = 1.0 / (rem_feas a step in the overall solution.) # replace with the correct formula or remove if not needed.
                  ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
